[package]
name = "sextant-wasm"
version = "0.1.0"
edition = "2021"
authors = ["linuskmr <linuskmr.dev@gmail.com>"]
description = "WebAssembly wrapper for the Sextant library"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
chrono = "0.4.38"
sextant = "0.2.1"
wasm-bindgen = "0.2.100"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }